# cto.new

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.qml  resources.qrc
.github/workflows/: packaging.yml
cmake/: QtHelpers.cmake
daemon/: daemon.cpp  performance.cpp  performance.h
debian/: changelog  gameperf-manager.install  postinst  rules
packaging/debian/: control  gameperf-manager.install  postrm  rules
polkit/: org.gameperf.daemon.policy
qml/: AppShell.qml  main.qml  qml.qrc
qml/components/: FocusOutline.qml  NavigationButton.qml
qml/onboarding/: FirstRunWizard.qml
qml/runtime/: RunningOverlay.qml
qml/settings/: SettingsHome.qml  qmldir
qml/settings/pages/: AccessibilityPage.qml  AccountsPage.qml  AudioPage.qml  DisplayPage.qml  DownloadsPage.qml  LanguagePage.qml  NetworkPage.qml
qml/shared/: AppTheme.qml  qmldir
qml/styles/: AppStyle.qml
qml/views/: SectionView.qml
resources/: gameperf-manager.desktop
scripts/: build-appimage.sh  build-deb.sh  ci_build.sh  install-performance-daemon.sh
src/: application.cpp  application.h  main.cpp  settingsmanager.cpp  settingsmanager.h  sourcemanager.cpp  sourcemanager.h
src/launch/: GamescopeLauncher.cpp  GamescopeLauncher.hpp  PerformanceProfile.cpp  PerformanceProfile.hpp
src/runtime/: ProcessMetricsProvider.cpp  ProcessMetricsProvider.hpp  RunningManager.cpp  RunningManager.hpp
src/settings/: SettingsStore.cpp  SettingsStore.h
src/ui/: DataModel.cpp  DataModel.h  NavigationModel.cpp  NavigationModel.h  TranslationStore.cpp  TranslationStore.h
systemd/: gameperf-daemon.service
tests/: CMakeLists.txt  GamescopeLauncherTest.cpp  RunningManagerTest.cpp
tests/qml/: tst_settingsaccessibility.qml  tst_settingsnavigation.qml  tst_settingspersistence.qml
tests/qmltests/: tst_AppShell.qml
udev/: 99-gameperf.rules
